# Odo-Project

./: .gitignore  CMakeLists.txt  README.md  build.sh  get_yolo.sh  meson.build  test.sh
detection-libs/odo-lib-opencv-yolo/: CMakeLists.txt  meson.build  odo-lib_opencv_yolo.cpp  odo-lib_opencv_yolo.h
gst-libs/odo-meta/: CMakeLists.txt  meson.build  odometa.cpp  odometa.h
gst/odo-detector/: CMakeLists.txt  config.h  gstododetector.cpp  gstododetector.h  meson.build
gst/odo-osd/: CMakeLists.txt  config.h  gstodoosd.cpp  gstodoosd.h  meson.build
gst/odo-track/: CMakeLists.txt  config.h  gstodotrack.cpp  gstodotrack.h  meson.build
gst/odo-viz/: CMakeLists.txt  config.h  gstodoviz.cpp  gstodoviz.h  meson.build
include/: DetectionData.h  RoiBox.h  common.h
plugins/odo-lib-opencv-yolo/: meson.build  odo-lib_opencv_yolo.cpp  odo-lib_opencv_yolo.h
